    element type). (Laruence)
  . Fixed bug #70977 (Segmentation fault with opcache.huge_code_pages=1).
    (Laruence)

- Phpdbg:
  . Fixed stderr being written to stdout. (Bob)

- Reflection:
  . Fixed bug #71018 (ReflectionProperty::setValue() behavior changed).
    (Laruence)
  . Fixed bug #70982 (setStaticPropertyValue behaviors inconsistently with
    5.6). (Laruence)

- Standard:
  . Fixed bug #70999 (php_random_bytes: called object is not a function).
    (Scott)
  . Fixed bug #70960 (ReflectionFunction for array_unique returns wrong number
    of parameters). (Laruence)

- Streams/Socket:
  . Add IPV6_V6ONLY constant / make it usable in stream contexts. (Bob)

- Soap:
  . Fixed bug #70993 (Array key references break argument processing).
    (Laruence)

- PDO_Firebird:
  . Fixed bug #60052 (Integer returned as a 64bit integer on X64_86). (Mariuz)

03 Dec 2015, PHP 7.0.0

- Core:
  . Fixed bug #70947 (INI parser segfault with INI_SCANNER_TYPED). (Laruence)
  . Fixed bug #70914 (zend_throw_or_error() format string vulnerability).
    (Taoguang Chen)
  . Fixed bug #70912 (Null ptr dereference instantiating class with invalid 
    array property). (Laruence)
  . Fixed bug #70895, #70898 (null ptr deref and segfault with crafted calable).
    (Anatol, Laruence)
  . Fixed bug #70249 (Segmentation fault while running PHPUnit tests on
    phpBB 3.2-dev). (Laruence)
  . Fixed bug #70805 (Segmentation faults whilst running Drupal 8 test suite).
    (Dmitry, Laruence)
  . Fixed bug #70842 (Persistent Stream Segmentation Fault). (Caleb Champlin)
  . Fixed bug #70862 (Several functions do not check return code of
    php_stream_copy_to_mem()). (Anatol)
  . Fixed bug #70863 (Incorect logic to increment_function for proxy objects).
    (Anatol)
  . Fixed bug #70323 (Regression in zend_fetch_debug_backtrace() can cause
    segfaults). (Aharvey, Laruence)
  . Fixed bug #70873 (Regression on private static properties access).
    (Laruence)